--- a/about.html
+++ b/about.html
@@ -11,13 +11,16 @@
    
     <nav class="navbar">
         <div class="navbar__container">
-            <a class="navbar-brand" href="#logo-icon">
+
+            <div class="logo-container">
+            <a class="navbar-brand" href="index.html">
                 <div class="logo-image">
                       <img src="./images/Logo.png" class="img-fluid">
                 </div>
           </a>
           <a href="#logo-text" id="navbar__logotext">Barber Shop</a>
-
+        </div>
+        
           <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span> <span class="bar"></span>
             <span class="bar"></span>
@@ -40,15 +43,6 @@
           </ul>
         </div>
       </nav>
-
-        
-        <!-- <div class="animated">
-            <div class="line">Look Your Best</div>
-            <div class="line">Got a Job Interview?</div>
-            <div class="line">Got a Date?</div>
-            <div class="line">Feel Your Best</div>
-                </div> -->
-
 
             <section class="about">
 
