--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
           <div class="logo-container">
 
-            <a class="navbar-brand" href="index.html">
+            <a href="#home-go" class="navbar-brand">
 
               <div class="logo-image">
                       <img src="./images/Logo.png" class="img-fluid">
               </div>
             </a>
 
-            <a href="home-go" id="navbar__logotext">Barber Shop</a>
+            <a href="#home-go" id="navbar__logotext">Barber Shop</a>
 
           </div>
 
@@ -135,8 +135,8 @@
 
       <div class="container">
         <h1>About Us</h1>                                   
-        <p>Hello, we are a family owned barber shop serving the Stafford area since 2006. Our goal is to provide a family friendly place</p>  
-        <p id="about-p-bottom">where everyone can come look their best together. We look forward to seeing you! </p>
+        <p>Hello, we are a family owned barber shop serving the Stafford area since 2006. Our goal is to provide a family friendly place where everyone</p>  
+        <p id="about-p-bottom"> can come look their best together. We look forward to seeing you! </p>
       </div>
 
     </section>
