--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
 
     </section>
 
+    <section class="hours-section">
+
+      <div class="container">
+        <h1>Hours of Operation</h1>
+        <li class="hours-line"><span class="hours-date">Mon-Fri:</span><span class="hours-time">8am - 7pm</span></li>
+        <li class="hours-line"><span class="hours-date">Sat:</span><span class="hours-time">8am - 6pm</span></li>
+        <li class="hours-line"><span class="hours-date">Sun:</span><span class="hours-time">8am - 5pm</span></li>
+      </div>
+
+    </section>
+
 
     <script src="./scripts/script.js"></script>
     
