--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 
       <div class="container">
         <h1>About Us</h1>                                   
-        <p>Hello, we are a family owned barber shop serving the Stafford area since 2006. Our goal is to provide a family friendly place where everyone</p>  
-        <p id="about-p-bottom"> can come look their best together. We look forward to seeing you! </p>
+        <p>Hello, we are a family owned barber shop serving the Stafford area since 2006. Our goal is to provide a family friendly place where everyone can come look their best together. We look forward to seeing you! </p>
       </div>
 
     </section>
@@ -145,7 +144,7 @@
     <section class="map-section">
 
       <div class="container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3128.8132776014018!2d-77.5072578850423!3d38.35330358643659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b6ea51a243cfbb%3A0x4a6e3ed2e3c41dcb!2s17%20Barber%20Shop!5e0!3m2!1sen!2sus!4v1632884865764!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3128.8132776014018!2d-77.5072578850423!3d38.35330358643659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b6ea51a243cfbb%3A0x4a6e3ed2e3c41dcb!2s17%20Barber%20Shop!5e0!3m2!1sen!2sus!4v1632884865764!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
     </section>
