--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         <div style="background-image:url(../images/boy1.JPG)" class="card">
         </div>
 
+        <div style="background-image:url(../images/womenpurple.JPG)" class="card">
+        </div>
+
         <div style="background-image:url(../images/woman1.JPG)" class="card">
         </div>
 
@@ -127,10 +130,10 @@
         <div style="background-image:url(../images/man6.JPG)" class="card">
         </div>
 
-        <div style="background-image:url(../images/man7.JPG)" class="card">
+        <div style="background-image:url(../images/man8.JPEG)" class="card">
         </div>
 
-        <div style="background-image:url(../images/man8.JPEG)" class="card">
+        <div style="background-image:url(../images/womenshort.JPG)" class="card">
         </div>
 
         <div style="background-image:url(../images/boy2.JPEG)" class="card">
