--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               <a href="#services-go" class="navbar__links" id="services-page">Services</a>
             </li>
 
-            <li class="navbar__btn">
+            <!-- <li class="navbar__btn">
               <a href="https://app.acuityscheduling.com/schedule.php?owner=19586239" class="button" id="appointment">Appointment</a>
-            </li>
+            </li> -->
 
           </ul>
         </div>
@@ -77,8 +77,8 @@
 
         <div class="cta-buttons">
           <a href="https://goo.gl/maps/6KSe5yJfVA62eZx46" class="direction-cta">Directions ></a>
-          <a href="https://app.acuityscheduling.com/schedule.php?owner=19586239" class="appointment-cta">Appointment</a> 
-        </div>             
+          <!-- <a href="https://app.acuityscheduling.com/schedule.php?owner=19586239" class="appointment-cta">Appointment</a> 
+        </div>              -->
       </div>
     
     </section>
