--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <h1>Price List</h1>
               
         <ul class="price-list">        
-          <li class="price-list-item"><span class="price-list-title">Regular Haircut</span><span class="price-list-separator"></span><span class="price">$15 & Up</span></li>
-          <li class="price-list-item"><span class="price-list-title">Fade</span><span class="price-list-separator"></span><span class="price">$16 - $19</span></li>
-          <li class="price-list-item"><span class="price-list-title">Scissor Cut</span><span class="price-list-separator"></span><span class="price">$23 & Up</span></li>
-          <li class="price-list-item"><span class="price-list-title">Beard & Shaves</span><span class="price-list-separator"></span><span class="price">$14 - $20</span></li>
+          <li class="price-list-item"><span class="price-list-title">Regular Haircut</span><span class="price-list-separator"></span><span class="price">$17 - 20</span></li>
+          <li class="price-list-item"><span class="price-list-title">Fade</span><span class="price-list-separator"></span><span class="price">$18 - $23</span></li>
+          <li class="price-list-item"><span class="price-list-title">Scissor Cut</span><span class="price-list-separator"></span><span class="price">$23 - 36</span></li>
+          <li class="price-list-item"><span class="price-list-title">Beard & Shaves</span><span class="price-list-separator"></span><span class="price">$16 - $25</span></li>
           <li class="price-list-item"><span class="price-list-title">Hair Line Clean-Up</span><span class="price-list-separator"></span><span class="price">$10</span></li>
           <li class="price-list-item"><span class="price-list-title">Senior</span><span class="price-list-separator"></span><span class="price">$14</span></li>
           <div id="about-go"></div>
