--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 
       <div class="container">
         <h1>Hours of Operation</h1>
-        <li class="hours-line"><span class="hours-date">Mon-Fri:</span><span class="hours-time">8am - 7pm</span></li>
-        <li class="hours-line"><span class="hours-date">Sat:</span><span class="hours-time">8am - 6pm</span></li>
-        <li class="hours-line"><span class="hours-date">Sun:</span><span class="hours-time">8am - 5pm</span></li>
+        <li class="hours-line"><span class="hours-date">Mon-Fri:</span><span class="hours-time">8AM - 6PM</span></li>
+        <li class="hours-line"><span class="hours-date">Sat:</span><span class="hours-time">8AM - 5PM</span></li>
+        <li class="hours-line"><span class="hours-date">Sun:</span><span class="hours-time">8AM - 4PM</span></li>
       </div>
 
     </section>
