--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
         <h1>Price List</h1>
               
         <ul class="price-list">        
-          <li class="price-list-item"><span class="price-list-title">Regular Haircut</span><span class="price-list-separator"></span><span class="price">$18 - 23</span></li>
-          <li class="price-list-item"><span class="price-list-title">Fade</span><span class="price-list-separator"></span><span class="price">$20 - $25</span></li>
-          <li class="price-list-item"><span class="price-list-title">Scissor Cut</span><span class="price-list-separator"></span><span class="price">$25 - 36</span></li>
-          <li class="price-list-item"><span class="price-list-title">Beard & Shaves</span><span class="price-list-separator"></span><span class="price">$19 - $25</span></li>
-          <li class="price-list-item"><span class="price-list-title">Hair Line Clean-Up</span><span class="price-list-separator"></span><span class="price">$12</span></li>
-          <li class="price-list-item"><span class="price-list-title">Senior</span><span class="price-list-separator"></span><span class="price">$16</span></li>
+          <li class="price-list-item"><span class="price-list-title">Regular Haircut</span><span class="price-list-separator"></span><span class="price">$20 - 30</span></li>
+          <li class="price-list-item"><span class="price-list-title">Fade, Mohawk, Flat Top</span><span class="price-list-separator"></span><span class="price">$22 - $34</span></li>
+          <li class="price-list-item"><span class="price-list-title">Razor & Scissor Cut</span><span class="price-list-separator"></span><span class="price">$28 - 36</span></li>
+          <li class="price-list-item"><span class="price-list-title">Beard Trim</span><span class="price-list-separator"></span><span class="price">$20 - $30</span></li>
+          <li class="price-list-item"><span class="price-list-title">Hair Line Clean-Up</span><span class="price-list-separator"></span><span class="price">$14</span></li>
+          <li class="price-list-item"><span class="price-list-title">Senior</span><span class="price-list-separator"></span><span class="price">$19</span></li>
           <div id="about-go"></div>
         </ul>       
       </div>
